# ducklake-lab

./: README.MD
demos/spark-ducklake-integration/: .gitignore  README.md  pyproject.toml  requirements.txt
demos/spark-ducklake-integration/docker/: Dockerfile  docker-compose.yml
demos/spark-ducklake-integration/src/: .env  ducklake_bootstrap.py  spark_ducklake_demo.py
